@@ -19,6 +19,7 @@ Verilator 5.025 devel
 * Add CITATION.cff (#5057) (#5058). [Gijs Burghoorn]
 * Add VPI eval needed tracking (#5065). [Todd Strader]
 * Add `--localize-max-size` option and optimization (#5072).
+* Add traceCapable indication to model header (#5053). [Vito Gamberini]
 * Fix missing flex include path variable (#4970) (#4971). [Christopher Taylor]
 * Fix missing parameters with comma to be errors (#4979) (#5012). [Paul Swirhun]
 * Fix bound queue printing (#5032). [Aleksander Kiryk, Antmicro Ltd.]
